# claude-bridge

./: .gitignore  README.md
.claude/commands/: stitch-status.md  stitch.md
bridges/go-nodejs/: README.md  edge-cases.md  future-scope.md  go.mod  node_lookup.go  template.client.go  template.sidecar.js
bridges/go-nodejs/tests/: go-nodejs_test.go  go.mod  test-child.js
bridges/go-python/: README.md  edge-cases.md  future-scope.md  template.client.go  template.sidecar.py
bridges/go-python/tests/: go-python_test.go  go.mod  test-child.py
bridges/go-ruby/: README.md  edge-cases.md  future-scope.md  go-ruby_test.go  go.mod  template.client.go  template.sidecar.rb
bridges/go-ruby/tests/: test-child.rb
bridges/go-rust/: README.md  edge-cases.md  future-scope.md  go.mod  template.client.go
bridges/go-rust/template.sidecar/: Cargo.toml
bridges/go-rust/template.sidecar/src/: main.rs
bridges/go-rust/tests/: go-rust_test.go  go.mod
bridges/go-rust/tests/test-child/: Cargo.toml
bridges/go-rust/tests/test-child/src/: main.rs
bridges/python-go/: README.md  edge-cases.md  future-scope.md  template.client.py
bridges/python-go/template.sidecar/: go.mod  main.go
bridges/python-go/tests/: python-go_test.py  test-client.py
bridges/python-nodejs/: README.md  edge-cases.md  future-scope.md  template.client.py  template.sidecar.js
bridges/python-nodejs/tests/: python-nodejs_test.py  test-child.js  test-client.py
bridges/python-ruby/: README.md  edge-cases.md  future-scope.md  template.client.py  template.sidecar.rb
bridges/python-ruby/tests/: python-ruby_test.py  test-child.rb  test-client.py
bridges/python-rust/: README.md  edge-cases.md  future-scope.md  template.client.py
bridges/python-rust/template.sidecar/: Cargo.toml
bridges/python-rust/tests/: python-rust_test.py  test-client.py
bridges/rust-go/: README.md  edge-cases.md  future-scope.md
bridges/rust-go/template.client/: Cargo.toml
bridges/rust-go/template.client/src/: main.rs
bridges/rust-go/template.sidecar/: go.mod  main.go
bridges/rust-go/tests/: rust-go_test.rs
bridges/rust-go/tests/test-runner/: Cargo.toml
bridges/rust-go/tests/test-runner/src/: main.rs
bridges/rust-nodejs/: README.md  edge-cases.md  future-scope.md  template.sidecar.js
bridges/rust-nodejs/template.client/: Cargo.toml
bridges/rust-nodejs/tests/: rust-nodejs_test.rs  test-child.js
bridges/rust-nodejs/tests/test-runner/: Cargo.toml
bridges/rust-nodejs/tests/test-runner/src/: main.rs
bridges/rust-python/: README.md  edge-cases.md  future-scope.md  template.sidecar.py
bridges/rust-python/template.client/: Cargo.toml
bridges/rust-python/template.client/src/: main.rs
bridges/rust-python/tests/: rust-python_test.rs  test-child.py
bridges/rust-ruby/: README.md  edge-cases.md  future-scope.md  template.sidecar.rb
bridges/rust-ruby/template.client/: Cargo.toml
bridges/rust-ruby/template.client/src/: main.rs
bridges/rust-ruby/tests/: rust-ruby_test.rs  test-child.rb
bridges/typescript-go/: README.md  edge-cases.md  future-scope.md  template.client.ts
bridges/typescript-go/template.sidecar/: go.mod  main.go
bridges/typescript-go/tests/: ts-go.test.ts
bridges/typescript-nodejs/: future-scope.md
bridges/typescript-python/: README.md  edge-cases.md  future-scope.md  template.client.ts  template.sidecar.py
bridges/typescript-python/tests/: test-child.py  ts-python.test.ts
bridges/typescript-ruby/: README.md  edge-cases.md  future-scope.md  template.client.ts  template.sidecar.rb
bridges/typescript-ruby/tests/: test-child.rb  ts-ruby.test.ts
bridges/typescript-rust/: README.md  edge-cases.md  future-scope.md  template.client.ts
bridges/typescript-rust/template.sidecar/: Cargo.toml
bridges/typescript-rust/template.sidecar/src/: main.rs
bridges/typescript-rust/tests/: ts-rust.test.ts
bridges/typescript-rust/tests/test-child/: Cargo.toml
bridges/typescript-rust/tests/test-child/src/: main.rs
languages/go/: rules.md
languages/go/tests/: README.md
languages/python/: rules.md
languages/python/tests/: README.md
languages/ruby/: rules.md
languages/ruby/tests/: README.md
languages/rust/: rules.md
languages/rust/tests/: README.md
languages/typescript/: rules.md
languages/typescript/tests/: ts-go.test.ts  ts-python.test.ts  ts-ruby.test.ts  ts-rust.test.ts
mcp-server/: package-lock.json  package.json  vitest.config.ts
mcp-server/src/: generator.ts  gitignore.ts  index.ts  language-pair.ts  tool.ts  validator.ts  venv.ts
mcp-server/tests/e2e/: generate.test.ts
samples/face-reco-app/: .gitignore  README.md  package-lock.json  package.json  server.ts  tsconfig.json
samples/sample-app/: README.md  analyze.py  analyze.ts  package-lock.json  package.json
shared/: README.md
shared/go/: bridge_client.go
shared/go_sidecar/: sidecar.go
shared/python/: async_bridge_client.py  bridge_client.py
shared/python_sidecar/: sidecar_base.py
shared/ruby_sidecar/: sidecar_base.rb
shared/rust/: async_bridge_client.rs  bridge_client.rs
shared/typescript/: bridge-client-base.ts  bridge-pool.ts  hot-reload.ts  path-helpers.ts
tools/: README.md
tools/go-gen-python-stubs/: go.mod  main.go
tools/pydantic-to-ts/: pydantic_to_ts.py
tools/ts-rs-export/: README.md
(+29 files in other folders)
