[package]
name = "python-bridge-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "python-bridge-client"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ctrlc = { version = "3", features = ["termination"] }

# POSIX-only: graceful SIGTERM before SIGKILL
[target.'cfg(unix)'.dependencies]
libc = "0.2"
