[package]
name = "ruby-bridge-client"
version = "0.1.0"
edition = "2021"
description = "Stitch Rust client template for Ruby sidecar IPC"

[[bin]]
name = "ruby-bridge-client"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ctrlc = { version = "3", features = ["termination"] }
