[package]
name = "bridge_name"
version = "0.1.0"
edition = "2021"

# Rename this package to match your bridge, e.g.:
#   name = "my_bridge"
# The compiled binary will be:
#   target/release/my_bridge   (Linux / macOS)
#   target/release/my_bridge.exe  (Windows)

[[bin]]
name = "bridge_name"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = { version = "3", features = ["termination"] }

[profile.release]
# Minimise binary size while keeping reasonable performance.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
