[package]
name = "test-child"
version = "0.1.0"
edition = "2021"

# This is the integration test sidecar for the Go → Rust bridge.
# It is a self-contained binary that does NOT depend on stitch_sidecar so it
# can be built independently without the shared workspace.

[[bin]]
name = "test-child"
path = "src/main.rs"

[dependencies]
serde_json = "1"
ctrlc = { version = "3", features = ["termination"] }
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
