[package]
name        = "test-runner"
version     = "0.1.0"
edition     = "2021"
description = "Ghost-Bridge integration test runner (Rust → Go)"

[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
