[package]
name = "rust-nodejs-test-runner"
version = "0.1.0"
edition = "2021"
description = "Stitch integration test runner for the Rust→Node.js bridge"

[[bin]]
name = "rust-nodejs-test-runner"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
