[package]
name = "test-child"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-child"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = { version = "3", features = ["termination"] }
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
